<resources>
    <string name="app_name">RoadMap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit_email">Submit</string>
    <string name="reset_instruction">Reset Your Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="submit_new_password">Submit</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout_confirm">Are you sure you want to Log out?</string>
    <string name="logout">Logout</string>
    <string name="logout_dismissed">Dismiss</string>
    <string name="cancel_logout">Cancel logout</string>
    <string name="exclamation">!</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="post_list">Post List</string>
    <string name="todo_list">Todos</string>
    <string name="go_back">Go back</string>
</resources>