<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".LogoutFragment">

    <ImageButton
        android:id="@+id/iButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/cancel_logout"
        android:src="@drawable/cancel_icon" />

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/orange_circular">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exclamation"
            android:textColor="@color/white"
            android:textSize="70sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="28dp"
        android:gravity="center"
        android:text="@string/logout_confirm"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/danger_background"
        android:paddingVertical="12dp"
        android:text="@string/logout"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_outline_background"
        android:paddingVertical="12dp"
        android:text="@string/logout_dismissed"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null" />

</LinearLayout>